# claude-code-skills

./: .gitignore  CLAUDE.md
evals/: README.md  promptfoo.yaml  pyproject.toml
evals/kubernetes-gitops/: trigger.yaml
evals/kubernetes-gitops/tasks/task-1/: instruction.md  quality.md  test.sh
evals/kubernetes-gitops/tasks/task-2/: instruction.md  quality.md  test.sh
evals/kubernetes-gitops/tasks/task-3/: instruction.md  quality.md  test.sh
evals/kubernetes-gitops/tasks/task-4/: instruction.md  quality.md  test.sh
evals/kubernetes-gitops/tasks/task-5/: instruction.md  quality.md  test.sh
evals/nix-flake-development/: trigger.yaml
evals/nix-flake-development/tasks/task-1/: instruction.md  quality.md  test.sh
evals/nix-flake-development/tasks/task-2/: instruction.md  quality.md  test.sh
evals/nix-flake-development/tasks/task-3/: instruction.md  quality.md  test.sh
evals/nix-flake-development/tasks/task-4/: instruction.md  quality.md  test.sh
evals/nix-flake-development/tasks/task-5/: instruction.md  quality.md  (+1 more)
evals/runner/gepa/: __main__.py  adapter.py  run.py
evals/runner/solving/: __main__.py  dataset.py  evaluators.py  run.py  task.py
evals/runner/trigger/: __main__.py  dataset.py  run.py  task.py
evals/runner/workspace/: __init__.py  dataset.py  run.py  task.py
evals/rust-engineering/: trigger.yaml
evals/secrets-management/: trigger.yaml
evals/tests/: test_gepa_adapter.py  test_solving_dataset.py  test_solving_evaluators.py  test_solving_task.py  test_trigger_dataset.py  test_trigger_task.py
evals/workspace/routing/: trigger.yaml
(+150 files in other folders)
